fix scrollbars

--- a/src/Panels/PanelGroup.module.css
+++ b/src/Panels/PanelGroup.module.css
@@ -1,5 +1,5 @@
 .PanelGroup {
-	overflow-y: scroll;
+	overflow-y: auto;
 	height: 100%;
 	flex-shrink: 0;
 }
