--- a/src/Toolbar/Toolbar.module.css
+++ b/src/Toolbar/Toolbar.module.css
@@ -5,7 +5,7 @@
 	display: grid;
 	grid-template-columns: 50% 50%;
 	align-content: flex-start;
-	overflow: scroll;
+	overflow-y: auto;
 }
 .Toolbar button {
 	width: var(--toolbar-button-width);
